<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UniBook</string>
    <string name="user_id_hint">ID를 입력하세요.</string>
    <string name="action_settings">setting</string>
    <string name="user_password_hint">비밀번호를 입력하세요.</string>
    <string name="btn_login_text">Login</string>
    <string name="check_auto_login_text">AUTO</string>
    <string name="text_usage_agree">이용약관 동의(필수)</string>
    <string name="text_personinfo_agree">개인정보 수집 및 이용에 대한 안내(필수)</string>
    <string name="text_person_info_agree">개인정보 수집 및 이용에 대한 안내(필수)</string>
    <string name="text_agree">동의</string>
    <string name="text_disagree">비동의</string>
    <string name="text_usage_agree_content">제 1 조 (목적) 이 약관은 CAU Book (회사 또는 CAU Book)이 제공하는 CAU Book 및 CAU Book 관련 제반 서비스의 이용과 관련하여 회사와 회원과의 권리, 의무 및 책임사항, 기타 필요한 사항을 규정함을 목적으로 합니다. 제 2 조 (정의) </string>
    <string name="text_person_info_agree_content">제 1 조 (목적) 이 약관은 CAU Book (회사 또는 CAU Book)이 제공하는 CAU Book 및 CAU Book 관련 제반 서비스의 이용과 관련하여 회사와 회원과의 권리, 의무 및 책임사항, 기타 필요한 사항을 규정함을 목적으로 합니다. 제 2 조 (정의) </string>
    <string name="btn_book_register">등록</string>
    <string name="btn_book_register_pass">건너뛰기</string>
    <string name="text_book_register_title">장터에 등록할 교재 선택</string>
    <string name="text_book_register_list_title">들었던 과목들</string>
    <string name="text_book_register_exist">교재유무</string>
	<string name="text_book_add_selling">등록하기</string>
	<string name="text_book_add_selling_course_name">과목명</string>
	<string name="text_book_add_selling_professor_name">교수명</string>
	<string name="text_book_add_selling_book_name">책이름</string>
	<string name="text_book_add_selling_book_price">가 격</string>
	<string name="text_book_add_selling_etc">기타</string>
	<string name="text_book_add_selling_photo">사진첨부</string>
	<string name="btn_book_add_selling">등록</string>
	<string name="btn_book_add_selling_return">돌아가기</string>
	<string name="btn_book_add_selling_photo">갤러리</string>
		
	<string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="login_error_id_empty">아이디를 입력하세요.</string>
    <string name="login_error_pw_empty">비밀번호를 입력하세요.</string>
    <string name="btn_send_msg">전송</string>
    <string name="text_book_search">책검색</string>
    <string name="text_delete_book">DELETE</string>
    <string name="text_show_book_info">책 상세 정보</string>
    <string name="text_show_book_info_course_name">과목명</string>
	<string name="text_show_book_info_professor_name">교수명</string>
	<string name="text_show_book_info_book_name">책이름</string>
	<string name="text_show_book_info_book_price">가 격</string>
	<string name="text_show_book_info_etc">기타</string>
    <string name="btn_show_book_info_question">문의</string>
    <string name="btn_show_book_info_return">돌아가기</string>
    <string name="text_show_book_info_photo">사진</string>
    <string name="login_error_wrong_info">아이디 혹은 비밀번호를 확인해주세요!</string>
</resources>
