<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/caubackground"
    android:weightSum="14"
    tools:context="com.cbproject.caubook.MainActivity" >

    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="2">
    
        <TextView
        	android:id="@+id/text_usage_title"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_alignParentBottom="true"
        	android:layout_centerHorizontal="true"
        	android:text="@string/text_usage_agree" />
        
    </RelativeLayout>
    	
    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="3">
        
        <TextView
	        android:id="@+id/text_agree_usage_content"
    	    android:layout_width="250dp"
        	android:layout_height="wrap_content"
        	android:background="#ffffff"
        	android:ems="10"
        	android:textSize="15sp"
        	android:layout_gravity="center_horizontal"
        	android:text="@string/text_usage_agree_content" >
    	</TextView>
    	
    </ScrollView>
    
    <CheckBox
        android:id="@+id/check_usage_agree"
        android:layout_width="wrap_content"
        android:layout_height="0px"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        android:text="@string/text_agree" />

    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="2">
    
    	<TextView
	        android:id="@+id/text_person_info_title"
    	    android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_alignParentBottom="true"
        	android:layout_centerHorizontal="true"
        	android:text="@string/text_person_info_agree" />
        
    </RelativeLayout>    

    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="3">
        
        <TextView
	        android:id="@+id/text_agree_person_content"
    	    android:layout_width="250dp"
        	android:layout_height="wrap_content"
        	android:background="#ffffff"
        	android:ems="10"
        	android:textSize="15sp"
        	android:layout_gravity="center_horizontal"
        	android:text="@string/text_person_info_agree_content" >
    	</TextView>
    	
    </ScrollView>
    
    <CheckBox
        android:id="@+id/check_person_agree"
        android:layout_width="wrap_content"
        android:layout_height="0px"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        android:text="@string/text_agree" />

    <RelativeLayout 
        android:layout_width="wrap_content"
        android:layout_height="0px"
        android:layout_weight="2"
        android:layout_gravity="center_horizontal">
        
		<Button
        	android:id="@+id/btn_agree_yes"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_centerVertical="true"
        	android:text="@string/text_agree" />

    	<Button
	        android:id="@+id/btn_agree_no"
    	    android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_alignBottom="@+id/btn_agree_yes"
        	android:layout_toRightOf="@+id/btn_agree_yes"
        	android:layout_toEndOf="@+id/btn_agree_yes"
        	android:text="@string/text_disagree" />
    	        
    </RelativeLayout>
    
    
</LinearLayout>
