<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/caubackground"
    android:orientation="vertical"
    android:weightSum="16"
    tools:context="com.cbproject.caubook.activities.MainActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="2"
        android:gravity="center">

        <TextView
            android:id="@+id/text_show_book_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/text_show_book_info"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="2"
        android:gravity="center" >

        <TextView
            android:id="@+id/text_show_book_info_course_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:text="@string/text_show_book_info_course_name" />

        <EditText
            android:id="@+id/edit_text_show_book_info_course_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/text_show_book_info_course_name"
            android:ems="10"
            android:focusable="false" />

    </RelativeLayout>
	
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="2"
        android:gravity="center" >

        <TextView
            android:id="@+id/text_show_book_info_professor_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:text="@string/text_show_book_info_professor_name" />

        <EditText
            android:id="@+id/edit_text_show_book_info_professor_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/text_show_book_info_professor_name"
            android:ems="10"
            android:focusable="false" />

    </RelativeLayout>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="2"
        android:gravity="center" >

        <TextView
            android:id="@+id/text_show_book_info_book_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:text="@string/text_show_book_info_book_name" />

        <EditText
            android:id="@+id/edit_text_show_book_info_book_name_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/text_show_book_info_book_name"
            android:ems="10"
            android:focusable="false" />

    </RelativeLayout>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="2"
        android:gravity="center" >

        <TextView
            android:id="@+id/text_show_book_info_book_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:text="@string/text_show_book_info_book_price" />

        <EditText
            android:id="@+id/edit_text_show_book_info_book_price_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/text_show_book_info_book_price"
            android:ems="10"
            android:focusable="false" />
        
    </RelativeLayout>
    
     <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="2"
        android:gravity="center" >

        <TextView
            android:id="@+id/text_show_book_info_etc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:text="@string/text_show_book_info_etc" />
		   
	       <EditText
	        android:id="@+id/edit_text_show_book_info_etc"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:layout_centerVertical="true"
	        android:layout_marginLeft="15dp"
	        android:layout_toRightOf="@+id/text_show_book_info_etc"
	        android:ems="10"
	        android:isScrollContainer="true"
	        android:focusable="false" />
        
    </RelativeLayout>
    
     <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="2"
        android:gravity="center" >

        <TextView
            android:id="@+id/text_show_book_info_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:text="@string/text_show_book_info_photo" />

        <ImageView
            android:id="@+id/imageView_text_show_book_info_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/caubook" />
        
    </RelativeLayout>
    
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0px"
        android:layout_gravity="center_horizontal"
        android:layout_weight="2" >

        <Button
            android:id="@+id/btn_show_book_info_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/btn_show_book_info_question" />

        <Button
            android:id="@+id/btn_show_book_info_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/btn_show_book_info_question"
            android:layout_toEndOf="@+id/btn_show_book_info_question"
            android:layout_toRightOf="@+id/btn_show_book_info_question"
            android:text="@string/btn_show_book_info_return" />
    </RelativeLayout>

</LinearLayout>