<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/caubackground"
    android:orientation="vertical"
    android:weightSum="16"
    tools:context="com.cbproject.caubook.activities.MainActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="2"
        android:layout_marginLeft="10dp" >

        <TextView
            android:id="@+id/text_book_add_selling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/text_book_add_selling"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="2"
        android:layout_marginLeft="10dp" >

        <TextView
            android:id="@+id/text_book_add_selling_course_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:text="@string/text_book_add_selling_course_name" />

        <EditText
            android:id="@+id/edit_text_book_add_selling_course_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/text_book_add_selling_course_name"
            android:ems="10" />

        <Button
            android:id="@+id/btn_book_add_selling_course_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/edit_text_book_add_selling_course_search"
            android:text="@string/text_book_add_selling_course_search"
            android:textSize="15dp" />

    </RelativeLayout>
	
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="2"
        android:layout_marginLeft="10dp" >

        <TextView
            android:id="@+id/text_book_add_selling_professor_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:text="@string/text_book_add_selling_professor_name" />

        <EditText
            android:id="@+id/edit_text_book_add_selling_professor_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/text_book_add_selling_professor_name"
            android:ems="10" />

        <Button
            android:id="@+id/btn_book_add_selling_professor_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/edit_text_book_add_selling_professor_search"
            android:text="@string/text_book_add_selling_professor_search"
            android:textSize="15dp" />

    </RelativeLayout>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="2"
        android:layout_marginLeft="10dp" >

        <TextView
            android:id="@+id/text_book_add_selling_book_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:text="@string/text_book_add_selling_book_name" />

        <EditText
            android:id="@+id/edit_text_book_add_selling_book_name_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/text_book_add_selling_book_name"
            android:ems="10" />

        <Button
            android:id="@+id/btn_book_add_selling_book_name_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/edit_text_book_add_selling_book_name_search"
            android:text="@string/text_book_add_selling_book_name_search"
            android:textSize="15dp" />

    </RelativeLayout>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="2"
        android:layout_marginLeft="10dp" >

        <TextView
            android:id="@+id/text_book_add_selling_book_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:text="@string/text_book_add_selling_book_price" />

        <EditText
            android:id="@+id/edit_text_book_add_selling_book_price_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/text_book_add_selling_book_price"
            android:ems="10" />
        
    </RelativeLayout>
    
     <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="2"
        android:layout_marginLeft="10dp" >

        <TextView
            android:id="@+id/text_book_add_selling_etc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:text="@string/text_book_add_selling_etc" />
		   
	       <EditText
	        android:id="@+id/edit_text_book_add_selling_etc"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:layout_centerVertical="true"
	        android:layout_marginLeft="15dp"
	        android:layout_toRightOf="@+id/text_book_add_selling_etc"
	        android:ems="10"
	        android:isScrollContainer="true" />
        
    </RelativeLayout>
    
     <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="2"
        android:layout_marginLeft="10dp" >

        <TextView
            android:id="@+id/text_book_add_selling_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:text="@string/text_book_add_selling_photo" />

        <Button
            android:id="@+id/btn_book_add_selling_picture"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/btn_book_add_selling_photo" />

        <EditText
            android:id="@+id/text_book_add_selling_photopath"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/btn_book_add_selling_picture"
            android:ems="10"
            android:isScrollContainer="true" />
        
    </RelativeLayout>
    
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0px"
        android:layout_gravity="center_horizontal"
        android:layout_weight="2" >

        <Button
            android:id="@+id/btn_book_add_selling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/btn_book_add_selling" />

        <Button
            android:id="@+id/btn_book_add_selling_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/btn_book_add_selling"
            android:layout_toEndOf="@+id/btn_book_add_selling"
            android:layout_toRightOf="@+id/btn_book_add_selling"
            android:text="@string/btn_book_add_selling_return" />
    </RelativeLayout>

</LinearLayout>